fixed digital clock components background dynamically changing during time shortening, fixed by aligning the css properly

--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,3 +1,12 @@
+.fixed-size-box {
+    width: 160px;
+  }
+  
+  .fixed-time {
+    height: 30px;
+  }
+  
+
 @font-face {
     font-family: 'retro';
     src: url('../assets/fonts/retro.ttf') format('truetype');
